--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Mai Elhadad  # your name (or website title) here
+title: Gnaneswari Giridharagopalan  # your name (or website title) here
 logo: "/images/photo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
