--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Gnaneswari Giridharagopalan  # your name (or website title) here
-logo: "/images/photo.jpg?raw=true" # your photo (or logo) here
+logo: ""C:\Users\deepa\Desktop\Meenu.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
   Python Connoisseur
